# dpcs

./: .editorconfig  .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml
.github/workflows/: ci-checks.yml  ci.yml  publish-wasm.yml  release.yml
adr/: ADR-0001-rust-first.md  ADR-0002-spec-md-source-of-truth.md  ADR-0003-binding-scaffold-artifacts.md  ADR-0004-registry-document-model.md  ADR-0005-reference-registry-http-api.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_smoke.py
bindings/wasm/: Cargo.toml  README.md  wasmer.toml
bindings/wasm/src/: lib.rs
crates/dpcs/: Cargo.toml
crates/dpcs-cli/: Cargo.toml
crates/dpcs-cli/src/: main.rs
crates/dpcs-cli/tests/: cli.rs
crates/dpcs/benches/: performance.rs
crates/dpcs/src/: lib.rs  paths.rs  synth.rs
crates/dpcs/src/binding/: artifact.rs  framework.rs  mod.rs
crates/dpcs/src/binding/adapters/: airflow.rs  common.rs  dagster.rs  kubernetes.rs  prefect.rs  temporal.rs
crates/dpcs/src/capabilities/: evaluate.rs  mod.rs  profile.rs
crates/dpcs/src/cli/: mod.rs  output.rs  tui.rs
crates/dpcs/src/compatibility/: compare.rs  mod.rs
crates/dpcs/src/conformance/: profile.rs
crates/dpcs/src/diagnostics/: category.rs  diagnostic.rs  report.rs  severity.rs  stage.rs
crates/dpcs/src/model/: analysis.rs  compatibility.rs  context.rs  contract.rs  control_flow.rs  data_flow.rs  endpoints.rs  execution.rs  extension.rs  extension_value.rs  failure.rs  governance.rs  graph.rs  interface.rs  lineage.rs  metadata.rs  mod.rs  quality_gate.rs  reference.rs  registry.rs  scheduling.rs  security.rs  step.rs
crates/dpcs/src/package/: manifest.rs  mod.rs  resolve.rs  validate.rs
crates/dpcs/src/parser/: json.rs  mod.rs  yaml.rs
crates/dpcs/src/plan/: pipeline_plan.rs
crates/dpcs/src/registry_net/: cache.rs  client.rs  mod.rs  server.rs  types.rs
crates/dpcs/src/report/: format.rs  graph_export.rs  html.rs  markdown.rs  mod.rs  views.rs
crates/dpcs/src/resolve/: mod.rs
crates/dpcs/src/schema/: mod.rs
crates/dpcs/src/validation/: cache.rs  control_flow.rs  data_flow.rs  execution.rs  failure.rs  governance.rs  graph.rs  lineage.rs  mod.rs  phases.rs  quality.rs  references.rs  scheduling.rs
crates/dpcs/tests/: capabilities.rs  compatibility_fingerprints.rs  conformance.rs  conformance_appendix_e.rs  package.rs  performance.rs  registry_net.rs  report.rs  schema.rs
crates/dpcs/tests/fixtures/capabilities/invalid/: bad_profile.profile.yaml  missing_mandatory.profile.yaml
crates/dpcs/tests/fixtures/capabilities/valid/: matching.profile.yaml  version_mismatch.profile.yaml
crates/dpcs/tests/fixtures/invalid/: bad_control_flow.dpcs.yaml  bad_data_flow.dpcs.yaml  bad_lineage.dpcs.yaml  bad_step_port_endpoint.dpcs.yaml  cycle_with_orphan_dataset.dpcs.yaml  duplicate_control_flow.dpcs.yaml  duplicate_edge.dpcs.yaml  duplicate_interface_inputs.dpcs.yaml  empty_retry.dpcs.yaml  empty_step_port.dpcs.yaml  event_missing_source.dpcs.yaml  freeform_timing.dpcs.yaml  incomplete_external_dep.dpcs.yaml  missing_dataset.dpcs.yaml  nested_cycle_a.dpcs.yaml  nested_cycle_b.dpcs.yaml  nested_missing.dpcs.yaml  scheduled_missing_cron.dpcs.yaml  unreachable_dataset.dpcs.yaml
crates/dpcs/tests/fixtures/valid/: duplicate_edge_different_kind.dpcs.yaml  minimal.dpcs.yaml  with_data_flow.dpcs.yaml  with_execution_model.dpcs.yaml
crates/dpcs/tests/fixtures/valid/nested/: child.dpcs.yaml  grandchild.dpcs.yaml  mid.dpcs.yaml  parent.dpcs.yaml  parent_deep.dpcs.yaml
docs/: ARCHITECTURE.md  BINDINGS.md  CLI_SPEC.md  CONFORMANCE.md  CRATE_LAYOUT.md  CURSOR_BUILD_PROMPT.md  DIAGNOSTICS_GUIDE.md  GETTING_STARTED.md  IMPLEMENTATION_PHASES.md  MODEL_GUIDE.md  NON_GOALS.md  PACKAGE_FORMAT.md  PLANNING.md  PROJECT_GOAL.md  PUBLIC_API.md  REGISTRY_API.md  RELATIONSHIP_TO_ODCS_DTCS.md  RUST_DEPENDENCIES.md  SPEC_COVERAGE.md  SPEC_USAGE.md  TESTING_PLAN.md  VALIDATION_GUIDE.md  diagnostics.catalog.json  index.md  requirements.txt
examples/: conformance.profile.yaml  minimal.dpcs.yaml  orchestrator.capabilities.yaml  registry.yaml  with_execution.dpcs.yaml  with_security_governance.dpcs.yaml
examples/compatibility/: baseline.dpcs.yaml  candidate_breaking.dpcs.yaml  candidate_compatible.dpcs.yaml
schemas/: BindingBundle.schema.json  CapabilityProfile.schema.json  CapabilityReport.schema.json  CompatibilityReport.schema.json  ConformanceClaim.schema.json  ConformanceProfile.schema.json  Diagnostic.schema.json  PackageManifest.schema.json  PipelineContract.schema.json  PipelinePlan.schema.json  RegisteredArtifact.schema.json  Registry.schema.json  ValidationReport.schema.json  documents.openapi.json  registry.openapi.json
src/: error.rs  lib.rs
src/binding/: artifact.rs  diagnostics.rs  framework.rs  mod.rs
src/binding/adapters/: airflow.rs  common.rs  dagster.rs  kubernetes.rs  mod.rs  prefect.rs  (+1 more)
src/capabilities/: evaluate.rs  mod.rs  orchestrator.rs  profile.rs
src/cli/: mod.rs
src/compatibility/: compare.rs
src/conformance/: mod.rs  profile.rs
src/diagnostics/: category.rs  diagnostic.rs  mod.rs  report.rs  severity.rs  stage.rs
src/model/: analysis.rs  compatibility.rs  contract.rs  control_flow.rs  data_flow.rs  dataset.rs  endpoints.rs  execution.rs  extension.rs  extension_value.rs  failure.rs  governance.rs  graph.rs  identity.rs  interface.rs  invariants.rs  lineage.rs  metadata.rs  mod.rs  quality_gate.rs  reference.rs  registry.rs  scheduling.rs  security.rs  step.rs  versioning.rs
src/parser/: diagnostics.rs  json.rs  mod.rs  yaml.rs
src/plan/: mod.rs  pipeline_plan.rs
src/validation/: com.rs  control_flow.rs  data_flow.rs  document.rs  execution.rs  extensions.rs  failure.rs  graph.rs  lineage.rs  mod.rs  phases.rs  quality.rs  references.rs  scheduling.rs  security.rs  structural.rs
tests/: binding.rs  capabilities.rs  cli.rs  conformance.rs  graph_analysis.rs  model_identity.rs  parse_and_validate.rs  planning.rs  round_trip.rs
(+29 files in other folders)
