[package]
name = "dpcs"
version = "0.2.0"
edition = "2021"
rust-version = "1.74"
description = "Reference implementation of the Data Pipeline Contract Standard (DPCS)"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/eddiethedean/dpcs"
homepage = "https://github.com/eddiethedean/dpcs"
documentation = "https://docs.rs/dpcs"
keywords = ["dpcs", "data-pipeline", "contracts", "validation"]
categories = ["command-line-utilities", "parser-implementations"]
authors = ["DPCS Contributors"]
exclude = [".github/", "docs/", "adr/"]

[lib]
name = "dpcs"
path = "src/lib.rs"

[[bin]]
name = "dpcs"
path = "src/bin/dpcs.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
