[workspace]
resolver = "2"
members = [
    "crates/dpcs",
    "crates/dpcs-cli",
    "bindings/wasm",
]
default-members = [
    "crates/dpcs",
    "crates/dpcs-cli",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
rust-version = "1.86"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/eddiethedean/dpcs"
homepage = "https://github.com/eddiethedean/dpcs"
authors = ["DPCS Contributors"]

[workspace.dependencies]
dpcs = { path = "crates/dpcs", version = "0.10.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
schemars = { version = "0.8", features = ["indexmap2"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
url = { version = "2", features = ["serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
