[package]
name = "dpcs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI for the Data Pipeline Contract Standard (DPCS) reference toolkit"
license.workspace = true
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = true

[[bin]]
name = "dpcs"
path = "src/main.rs"

[dependencies]
dpcs = { workspace = true, features = ["full"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
